Hide Scrol Bars at login

--- a/app/assets/stylesheets/casino.scss
+++ b/app/assets/stylesheets/casino.scss
@@ -179,7 +179,7 @@ table {
   border: 1px solid #e6e6e6;
   margin: auto;
   margin-top: 10%;
-  overflow: auto;
+  overflow: hidden;
   padding: 20px;
   width: 560px;
 }
